# PocketChangeProtocol

./: .gitignore  .vercelignore  30_assets_test_logs.txt  CLAUDE.md  Dockerfile.web  PocketChange_Demo_Final.webm  PocketChange_Demo_Visual.webm  README.md  SERVICES.md  SESSION_LOG.md  SNIPER_LEARNINGS.md  agent_state.json  clean_dust.mjs  clean_error_log.txt  clean_gas_log.txt  clean_log.txt  commit.sh  deploy.sh  deploy_node.ps1  deploy_rust.ps1  dev.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  doppler_help.txt  doppler_help_utf8.txt  droplet_df.txt  droplet_free.txt  dust.txt  ecosystem.config.js  enginesnapshot.txt  fetch_log.js  force_5_results.txt  get_endpoints.py  helius_txs.txt  historical_trades.json  historical_trades_verified.json  init_pm2.sh  jito_txs.txt  jito_txs_final.txt  (+36 more)
.next_build/: trace  trace-build
.planning/: 1-PLAN.md  5-PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SUMMARY.md  UI_DATA_PATCH.md
anchor/: Anchor.toml  package-lock.json  package.json
antigravy/: README.md
bitte-agent/: DEPLOY.md  package-lock.json  package.json
docs/: admin_manual.md  api.md  architecture.md  revenue_plan.md  user_guide.md
engine-worker/: .dockerignore  Cargo.toml  Dockerfile  engine.toml  error.txt  telemetry.jsonl
engine-worker/src/: check_wallets.rs  lib.rs  main.rs  rpc.rs  tokens.rs  types.rs
engine-worker/src/approval/: http_server.rs  mod.rs  telegram.rs
engine-worker/src/config/: mod.rs
engine-worker/src/db/: mod.rs
engine-worker/src/engine/: aggregator.rs  drift.rs  mod.rs  pricing.rs  providers.rs  sandbox.rs
engine-worker/src/executor/: cex_executor.rs  circuit_breaker.rs  jito.rs  mod.rs  simulator.rs
engine-worker/src/kms/: mod.rs
engine-worker/src/pool_monitor/: decode.rs  geyser.rs  mod.rs  pool_math.rs  scanner.rs  types.rs  websocket.rs
engine-worker/src/price/: cex.rs  jupiter.rs  mod.rs
engine-worker/src/sniper/: discovery.rs  executor.rs  mod.rs  positions.rs  scorer.rs  velocity.rs
engine-worker/src/strategy/: cex_dex.rs  flash_loan.rs  funding_rate.rs  mod.rs  statistical.rs  triangular.rs
engine-worker/tests/: integration.rs
k8s/: engine-worker.yaml  frontend-api.yaml  postgres.yaml
marketing/: hooks.md
optimized-jupiter-bot/: .env.example  2h_live_test_report.txt  AUDIT.md  Dockerfile  GEMINI.md  buys_memory.json  calc_speeds.ts  check_bals.js  dashboard.js  deploy.tar  dist.tar  docker-compose.yml  ecosystem.config.js  heartbeat.js  latency.txt  list_targets.js  live_monitor.ps1  metrics_server.js  new_wallet.json  package-lock.json  package.json  pm2_arb.txt  pm2_bot_debug.txt  pm2_current.txt  pm2_fixed.txt  pm2_latency.txt  pm2_live.txt  pm2_out.txt  pm2_status.txt  sell_all.js  setup_keys.js  (+11 more)
pocketchange-vault/: Cargo.toml
pocketchange-vault/src/: lib.rs
(+395 files in other folders)
