[package]
name = "arbitrasaas-engine"
version = "0.1.0"
edition = "2021"
authors = ["ArbitraSaaS <hello@arbitrasaas.io>"]
description = "Multi-tenant Solana Arbitrage Worker Engine"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros"] }
solana-client = "1.18" # Solana RPC interactions
solana-sdk = "1.18"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
aes-gcm = "0.10" # For decrypting HSM-managed wallet keys
# jito-protos = "0.1.0"
sha2 = "0.10.8"
futures = "0.3"
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
