[package]
name = "pocketchange-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "~1.18.10"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.0", features = ["no-entrypoint"] }
borsh = "1.3.1"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
